      execution.
    - You can inquire the types of variables and functions (`whatis') 
      through the source popup menu.
    - Selecting a data display item now also sets the `()' argument field
      in the source window, making it available for further commands.
    - `New display' subsumes `Dependent display': if a display is
      selected, the new display is made dependent on it.
    - Option editors.  New panels for DDD preferences and GDB
      settings.  GDB settings can be saved across DDD sessions.
    - Some items have been renamed for further clarity:
      * The `command window' is now named `debugger console', to avoid
        confusion with the command tool.
      * The `Interrupt' button is now named `Break', to associate the
	concept with `Breakpoints'.
      * The `Break ()' and `Clear ()' buttons are now named `Break at ()'
        and `Clear at ()', respectively.
      * The `Dereference' button is now named `Display *'.
    - The `Save Options on Exit' function has been removed, as it
      also saved options given upon DDD invocation like `--dbx' or
      `--exec-window'.  Options must now always be saved explicitly.
    - Ctrl+C has now the highest priority of all processed events.
    - Improved remote debugging.  In contrast to `--host', the new
      `--rhost' option uses `rsh' without arguments (aka `rlogin') 
      to access the remote debugger.  DEC and SGI DBX require this.
    - The DDD License can now be viewed from within DDD.
    - The DDD resources are now fully documented; the DDD manual
      contains several customization examples (fonts, colors,
      buttons).

    Supported debuggers and languages:
    - XDB support.  On popular request, DDD now also supports HP's XDB as
      inferior debugger.
    - Extended DBX support.  DDD determines DBX properties
      at run-time and adapts automatically to a wide range of DBX
      variants.
    - Even more DBX support.  DDD now supports DBX on SUN, DEC, AIX,